# lambdalabs-cli

./: .coverage  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
src/lambdalabs_cli/: api.py  cli.py  config.py  logging_config.py  scheduler.py
tests/: __init__.py  conftest.py  test_README.md  test_all.py  test_api.py  test_cli.py  test_config.py  test_core_functionality.py  test_integration.py  test_scheduler.py  test_simple.py
