[project]
name = "lambdalabs-cli"
version = "0.1.0"
description = "Command-line interface for Lambda Labs cloud GPU instances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "python-crontab>=3.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "toml>=0.10.2",
]

[project.scripts]
lambdalabs = "lambdalabs_cli.cli:cli"
