[project]
name = "lambdalabs-cli"
version = "0.1.0"
description = "Unofficial command-line interface for Lambda Labs cloud GPU instances with scheduling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Lambda Labs CLI Contributors" }
]
keywords = ["lambda-labs", "gpu", "cloud", "cli", "automation", "scheduling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.2.1",
    "python-crontab>=3.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://github.com/rmcwhorter/lambdalabs-cli"
Repository = "https://github.com/rmcwhorter/lambdalabs-cli"
Issues = "https://github.com/rmcwhorter/lambdalabs-cli/issues"

[project.scripts]
lambdalabs = "lambdalabs_cli.cli:cli"
